--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,12 @@
     --green-color:#84D56D;
     --logo-color:#f5e765;
     --title-color:#ec0808;
+    --login-panel:#f1e066d1;
 }
+a {
+    color:var(--title-color)
+}
+
 .logo {
     height: 55px;
     width: 55px;
@@ -16,11 +21,13 @@
     margin-bottom: 10px;
 }
 .caption {
-    background-color: rgb(232,14,14,0.6);
+    background-color: var(--title-color);
+    
 }
 .img-caption {
-    color: #131211;
+    color:var(--logo-color);
     line-height: 90%!important;
+    padding: 8px;
 }
 .login-btn {
     background-color: transparent;
@@ -29,9 +36,11 @@
     border-color: #f33616;
     text-transform: capitalize;
     line-height: 25px;
+    color: var(--logo-color)
 }
 .login-btn:hover,
-.register-btn:hover{
+.learn-more--btn:hover,
+.register-btn:hover {
     background-color:#f33616;
     border-color:#000;
     color:#000;
@@ -45,13 +54,30 @@
     text-transform: capitalize;
     line-height: 35px;
     margin-top: 12px;
+    color: var(--logo-color);
+}
+.learn-more--btn {
+    background-color:var(--logo-color);
+    border-radius: 36px;
+    border-style: solid;
+    border-color: #ff6600;
+    text-transform: capitalize;
+    line-height: 35px;
+    margin-top: 12px;
+    color: #000;
+    padding:7px;
 }
 
 .card-panel {
     border-radius: 75px;
     background-color:var(--yellow-color);
 }
+.login-panel {
+    border-radius: 75px;
+    background-color: var(--login-panel);
+}
 .card {
+    margin-top: 6rem;
     border-radius: 70px;
     background-color:var(--orange-color);
 }
@@ -90,6 +116,7 @@ nav ul a:hover{
     border-top-right-radius: 74px;
     position: relative;
     text-align: center;
+    
 }
 .card-headers {
     color: var(--title-color);
@@ -119,10 +146,13 @@ nav ul a:hover{
     border-start-start-radius: 32px;
     border-top-right-radius: 74px;
 }
-
+.card .card-content {
+    padding: 38px!important;
+    font-family: 'Open sans', sans-serif;
+}
 .card-overlay:hover {
     opacity: 1;
-    background-color: rgba(0,0,0,0.5);
+    background-color: var(--yellow-color);
     transition: .6s ease-in-out;
 
 }
@@ -151,6 +181,13 @@ nav ul a:hover{
 .dropdown-content li>span,
 .select-wrapper input.select-dropdown {
     color: var(--title-color);
+}
+/* Adds padding to Materialize's class validate */
+ .validate {
+    padding-left:20px!important;
+}
+.input-field {
+    padding-right: 50px!important;
 }
 .modal {
     /* https://pixabay.com/illustrations/illustration-child-clipart-graphics-2814002/ */
