Add header to Admin page

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <div class="row">
+  <h3 class="center-align titles"> Admin's Profile</h3>
   <div class="col s12 center-align">
     <a href="{{ url_for('new_category')}}" class="btn-large waves-effect waves-light red darken-3">Add New Category</a>
   </div>
