Add helper text to input forms

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -51,6 +51,7 @@
                 <div class="input-field col s12 l12" >
                   <input placeholder="Image URL" id="image_url" pattern="https?://.+" name="image_url" type="url" class="validate" required>
                   <label for="image_url">Image URL</label>
+                  <span class="helper-text" data-error="wrong URL" data-success="correct">Must be valid image URL</span> 
                 </div>
             </div>
           <div class="row">
