--- a/templates/update.html
+++ b/templates/update.html
@@ -8,7 +8,7 @@
 <div class="row">
     <form action="{{ url_for('update_activity', activity_id=activity._id)}}" method="POST" class="col s12 offset-m3">
       <div class="row">
-        <div class="input-field col s6">
+        <div class="input-field col s12 l7">
           <select id="category_type" name="category_type" class="validate" required aria-required="true">
             <option value="">Select Activity Category</option>
               {% for category in categories %}
@@ -24,14 +24,14 @@
       </div> 
       <!-- Activity name inputs -->
       <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12 l7">
               <input placeholder="Activity Name" value="{{ activity.activity_name }}" id="activity_name" name="activity_name" type="text" class="validate" data-length="20" required>
               <label for="activity_name">Activity Name</label>
             </div>
       </div>    
           <!-- Activity nescessities inputs -->
               <div class="row">
-                  <div class="input-field col s6">
+                  <div class="input-field col s12 l7">
                     <textarea id="necessities" placeholder="Activity Necessities" name="necessities" type="text" class="materialize-textarea validate" data-length="500" required>
                       {{- activity.necessities -}}
                     </textarea>
@@ -40,7 +40,7 @@
               </div>
               <!-- Activity description inputs -->
               <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12 l7">
                   <textarea id="description" placeholder="Activity Description" name="description" type="text"class="materialize-textarea validate" data-length="500" required>
                     {{- activity.description -}}
                   </textarea>
@@ -49,7 +49,7 @@
               </div>
               <!-- Activity outcome inputs -->
               <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12 l7">
                   <textarea id="activity_outcome" placeholder="Activity Outcome" name="activity_outcome" class="materialize-textarea validate" data-length="500" required >
                     {{- activity.activity_outcome -}}
                   </textarea>
@@ -58,9 +58,10 @@
               </div>
               <!-- Image URL input -->
               <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12 l7">
                   <input placeholder="Image URL" id="image_url" value="{{ activity.image_url }}" name="image_url" type="url" class="validate">
                   <label for="image_url">Image URL</label>
+                  <span class="helper-text" data-error="wrong" data-success="right">Must be valid image URL</span>
                 </div>
             </div>
             
