--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,20 @@ a {
     vertical-align: middle;
     margin-bottom: 10px;
 }
+.footer-logo{
+    height: 120px;
+    width: 120px;
+}
+.footer-title{
+    font-size: 58px;
+    font-family: 'Open sans',sans-serif;
+}
+.links {
+    color:var(--red-color);
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Open sans',sans-serif;
+}
 .caption {
     background-color: var(--title-color);
     
