--- a/templates/base.html
+++ b/templates/base.html
@@ -108,23 +108,25 @@
    
        <div class="container">
            <div class="row">
-               <div class="col l6 s12">
-                   <h5 class="white-text">Growapps&trade;</h5>
-                   <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.
-                   </p>
+               <div class="col l4 s12">
+                   <h5 class="yellow-text footer-title">Growapps&trade;</h5>
                </div>
-               <div class="col l4 offset-l2 s12">
-                   <h5 class="white-text">Get conected?</h5>
+               <div class=" center-align col l4 s12">
+                <img src="{{ url_for('static',filename='images/logo.png') }}" class="footer-logo" alt="Website Logo">
+               </div>
+               <div class="col l4 s12">
                    <ul>
-                       <li><a href="https://www.linkedin.com/in/goran-kuzma/" aria-label="Link to Linkedin" rel="noopener" target="_blank" class="grey-text text-lighten-3" >Goran Kuzma</a></li>
+                       <li><p class="links right-align">Useful links:</p></li>
+                       <li class="yellow-text right-align"><a class="yellow-text" href="https://first5.gov.ie/parents/pre-school-at-home" target="_blank">First Five</a></li>
+                       <li class="yellow-text right-align"><a class="yellow-text" href="https://explorium.ie/" target="_blank" >Explorium</a></li>
                    </ul>
                </div>
            </div>
        </div>
        <div class="footer-copyright">
            <div class="container">
-               © 2014 Copyright Text
-               <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+              <span class="yellow-text" id="year"></span> 
+               <a href="https://www.linkedin.com/in/goran-kuzma/" aria-label="Link to Linkedin" rel="noopener" target="_blank" class="yellow-text text-lighten-3">&copy;Growapps&trade;</a>
            </div>
        </div>
   
