--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <div class="slider">
   <ul class="slides">
     <li>
-      <img src="{{ url_for('static',filename='images/hero1.jpg') }}">
+      <img src="{{ url_for('static',filename='images/hero1.jpg') }}" alt="Image of kids playing">
       <!-- https://www.pexels.com/photo/children-doing-arts-and-crafts-at-school-8612992/ image -->
       <div class="caption center-align">
         <h4 class="img-caption">"The goal of early chilhood education
@@ -12,7 +12,7 @@
       </div>
     </li>
     <li>
-      <img src="{{ url_for('static',filename='images/hero2.jpg') }}">
+      <img src="{{ url_for('static',filename='images/hero2.jpg') }}" alt="Image of kids playing">
       <!-- https://www.pexels.com/photo/boy-in-blue-long-sleeve-shirt-and-denim-shorts-playing-with-wooden-toy-cars-8612955/ image -->
       <div class="caption left-align">
         <h3 class="img-caption">Importance of play in early chilhood</h3>
@@ -22,7 +22,7 @@
       </div>
     </li>
     <li>
-      <img src="{{ url_for('static',filename='images/hero3.jpg') }}">
+      <img src="{{ url_for('static',filename='images/hero3.jpg') }}" alt="Image of kids playing">
       <!-- https://www.pexels.com/photo/sea-sunny-beach-vacation-7862529/ image -->
       <div class="caption right-align">
         <h3 class="img-caption">Pre-school at Home</h3>
@@ -33,7 +33,7 @@
       </div>
     </li>
     <li>
-      <img src="{{ url_for('static',filename='images/hero4.jpg') }}">
+      <img src="{{ url_for('static',filename='images/hero4.jpg') }}" alt="Image of kids playing">
       <!-- https://www.pexels.com/photo/little-kid-playing-with-plastic-shovel-and-car-in-yard-5623742/ -->
       <div class="caption center-align">
         <h3 class="img-caption">Natural enviroment as a source of learning</h3>
@@ -106,7 +106,7 @@
  <div class="container">
   <div class="row">
     <div class="col s12">
-      <img src="{{ url_for('static',filename='images/city.png') }}" alt="" id="city">
+      <img src="{{ url_for('static',filename='images/city.png') }}" alt="Ilustration of the city" id="city">
     </div>
   </div>
 </div> 
