--- a/templates/error500.html
+++ b/templates/error500.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="row col s12 center-align">
-  <h3 class="center-align titles">ERROR 404!</h3>
+  <h3 class="center-align titles">ERROR 500!!</h3>
 </div>
 <div class="row">
     <div class="col s12 center-align">
