Add helper text to login/register form

--- a/templates/error404.html
+++ b/templates/error404.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="row">
       <div class="col s12">
-        <img src="{{ url_for('static',filename='images/girl.png') }}" alt="Ilustration of the city" id="city">
+        <img src="{{ url_for('static',filename='images/girl.png') }}" alt="Photo of a sad face girl" id="city">
       </div>
     </div>
   </div> 
