--- a/templates/login.html
+++ b/templates/login.html
@@ -12,13 +12,15 @@
                         <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" 
                         pattern="^[a-zA-Z0-9]{5,20}$"  title="Must be between 5 and 20 characters"  data-length="20" required>
                         <label for="username"><i class="material-icons">person</i></label>
+                        <span class="helper-text">Must be between 5 and 20 characters</span>
                     </div>
                     <!-- Password input field -->
                     <div class="row">
                         <div class="input-field col s12 ">
-                            <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{5,}"
+                            <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{5,20}"
                             title="Must contain at least one number and one uppercase and lowercase letter, and at least 5 or more characters" data-length="20" required>
                             <label for="password"> <i class="material-icons">password</i> </label>
+                            <span class="helper-text">Must be between 5 and 20 characters</span>
                         </div>
                     </div>
                     <!-- Submit Button -->
