--- a/templates/register.html
+++ b/templates/register.html
@@ -12,6 +12,7 @@
                         <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="^[a-zA-Z0-9]{5,20}$" 
                         title="Must be between 5 and 20 characters" data-length="20" required >
                         <label for="username"><i class="material-icons">person_add</i></label>
+                        <span class="helper-text">Must be between 5 and 20 characters</span>
                     </div>
                     <!-- Password input field -->
                     <div class="row">
@@ -19,6 +20,7 @@
                             <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{5,20}"
                             title="Must contain at least one number and one uppercase and lowercase letter, and between 5 and 20 characters" data-length="20" required>
                             <label for="password"> <i class="material-icons">lock</i> </label>
+                            <span class="helper-text">Must be between 5 and 20 characters</span>
                         </div>
                     </div>
                     <!-- Submit Button -->
