Resize fonts and image size for mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -201,6 +201,7 @@ nav ul a:hover{
     font-size: 15px;
     padding: 0 28px;
     border-radius: 32px;
+
 }
  input.search-text {
     border-bottom: none!important;
@@ -273,13 +274,20 @@ nav ul a:hover{
 #banner{
     margin-bottom: -6px;
 }
-
+.profile-header {
+    color: #ec0808;
+    text-transform: capitalize;
+    font-size: 1.9rem;
+    line-height: 110%;
+    margin: 1.9466666667rem 0 4.168rem 0;
+}
 
 
 .titles {
     font-size: 5.625rem;
     font-family: 'Indie Flower',cursive;
     color: #ec0808;
+    text-transform: capitalize;
 }
 .page-footer {
     background-color: #00aeef;
@@ -287,5 +295,26 @@ nav ul a:hover{
 @media only screen and (max-width: 992px){
     nav .logo {
         font-size: 1.8rem;
+    }
+    .titles {
+        font-size: 3.625rem;
+    }
+    .profile-header {
+        color: #ec0808;
+        text-transform: capitalize;
+        font-size: 1rem;
+        line-height: 110%;
+        margin: 1.9466666667rem 0 4.168rem 0;
+    }
+    .footer-title {
+        font-size: 37px;
+    }
+    .footer-logo {
+        height: 78px;
+        width: 78px;
+    }
+    .activity-image {
+        width: 100%;
+        height: 35vh;
     }
 }
