--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col l4 s12">
-                    <h5 class="yellow-text footer-title">Growapps&trade;</h5>
+                    <h5 class="yellow-text center-align footer-title">Growapps&trade;</h5>
                 </div>
                 <div class=" center-align col l4 s12">
                     <img src="{{ url_for('static',filename='images/logo.png') }}" class="footer-logo"
