--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align flash-msg titles">{{ username }}'s profile.</h3>
+<h3 class="center-align titles">{{ username }}'s profile.</h3>
 <div class="container">
     <div class="section">
         <div class="row">
@@ -56,7 +56,7 @@
 
             
         {% else %}
-        <h3 class="center-align">{{ username }}! You don't have any activities posted yet.</h3>
+        <h3 class="center-align profile-header">{{ username }}! You don't have any activities posted yet.</h3>
            <div class="col center-align s12 m6 offset-m3">
                <a href="{{ url_for('upload')}}" class="yellow lighten-3 red-text btn-large center-align">Post your first Activity.</a>
        </div>
