Style headers during test phase

--- a/templates/activities.html
+++ b/templates/activities.html
@@ -66,7 +66,7 @@
       <!-- Modal Structure -->
       <div id="{{ activity._id }}" class="modal">
         <div class="modal-content">
-          <h4>{{ username }}!Are you sure you want to delete activity?</h4>
+          <h4>{{ username }} Are you sure you want to delete activity?</h4>
           <p>Activity will be deleted permanently.</p>
         </div>
         <div class="modal-footer">
