--- a/templates/category.html
+++ b/templates/category.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="row col s12 center-align">
-  <h3 class="center-align">Add New Category</h3>
+  <h3 class="center-align titles">Add New Category</h3>
 </div>
 
 <div class="row">
