--- a/templates/error500.html
+++ b/templates/error500.html
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
     <div class="col s12 center-align">
-      <a href="{{ url_for('get_activities')}}" class="btn-large waves-effect waves-light red darken-3">Oops, you've gone too far... Click here ro return</a>
+      <a href="{{ url_for('get_activities')}}" class="btn-large waves-effect waves-light red darken-3">Oops... Click here ro return</a>
     </div>
   </div>
   <div class="container">
